# FearOfTheDark

./: .gitignore  CASOS_PRACTICOS_ENFOQUE.md  CONTRIBUTING.md  GUION_TALLER.md  LICENSE  README.md  SECURITY.md  ollama.md  programa.md  pyproject.toml  run_centroids_hf_all.py  run_centroids_hf_new.py  run_centroids_im_comparison.py  run_embed_users_all.py  run_embeddings_hf_new.py  run_ner.py
.atl/: .skill-registry.cache.json  skill-registry.md
BlackBasta/: README.md
CardingForums/: 00_reconocimiento.ipynb  01_carding_forums.ipynb  01_ingenieria_datos.ipynb  02_analisis_estructural.ipynb  03_analisis_semantico.ipynb  04_sintesis_informe.ipynb  README.md  csbc26_caso_cardingforums.pptx
ContiLeaks/: requirements.txt
HackingForums/: 00_extract_and_explore.ipynb  00_reconocimiento.ipynb  01_ingenieria_datos.ipynb  01_load_and_clean.ipynb  02_analisis_estructural.ipynb  02_hacking_forums.ipynb  02_hacking_forums_executed.ipynb  02_llm_analysis.ipynb  03_analisis_semantico.ipynb  03_embeddings_profiling.ipynb  04_sintesis_informe.ipynb  README.md  csbc26_caso2_hackingforums.pptx  csbc26_caso_hackingforums.pptx
IronMarch/: 00_extract_and_explore.ipynb  00_reconocimiento.ipynb  02_analisis_estructural.ipynb  02_llm_analysis.ipynb  03_analisis_semantico.ipynb  03_embeddings_profiling.ipynb  03_ironmarch.ipynb  03_ironmarch_executed.ipynb  04_sintesis_informe.ipynb  README.md  csbc26_caso3_ironmarch.pptx  csbc26_caso_ironmarch.pptx  embeddings.py
_shared/: __init__.py  theme.py
bloque0_ecosistema/: csbc26_b0_ecosistema.pptx
bloque1_bigdata/: csbc26_b1_bigdata.pptx  (+1 more)
(+249 files in other folders)
