[project]
name = "csbc26"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.4",
    "chromadb>=1.5.9",
    "hdbscan>=0.8.44",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=17.0.0",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.1",
    "umap-learn>=0.5.12",
]
